[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Anim/Sprite1.png" type="Texture" id=2]
[ext_resource path="res://Player/Anim/Sprite2.png" type="Texture" id=3]
[ext_resource path="res://Player/Anim/Sprite3.png" type="Texture" id=4]
[ext_resource path="res://Player/Anim/Sprite4.png" type="Texture" id=5]
[ext_resource path="res://Player/Anim/Sprite7.png" type="Texture" id=6]
[ext_resource path="res://Player/Anim/Sprite8.png" type="Texture" id=7]
[ext_resource path="res://Player/Anim/Sprite9.png" type="Texture" id=8]
[ext_resource path="res://Player/Anim/Sprite10.png" type="Texture" id=9]
[ext_resource path="res://Player/Anim/Sprite5.png" type="Texture" id=10]
[ext_resource path="res://Player/Anim/Sprite6.png" type="Texture" id=11]
[ext_resource path="res://Player/Health/health3.png" type="Texture" id=12]
[ext_resource path="res://Player/Health/health1.png" type="Texture" id=13]
[ext_resource path="res://Player/Health/health2.png" type="Texture" id=14]
[ext_resource path="res://Player/Bar.gd" type="Script" id=15]
[ext_resource path="res://Player/hurt.wav" type="AudioStream" id=16]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 3.04095
height = 10.0295

[sub_resource type="Curve" id=3]

min_value = -360.0
max_value = 360.0
bake_resolution = 100
_data = [ Vector2( 0, -360 ), 0.0, 0.0, 0, 0, Vector2( 1, -360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.592624, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]

flags = 4
width = 2048
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.0
angular_velocity = 360.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
angle_curve = SubResource( 4 )
scale = 4.0
scale_random = 0.0
scale_curve = SubResource( 6 )
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Scale" ]

[sub_resource type="Animation" id=8]

resource_name = "Damaged"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=9]

resource_name = "Normal"
length = 1.0
loop = false
step = 0.1

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
immortal = null

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="Trail" type="Particles2D" parent="." index="2"]

show_behind_parent = true
position = Vector2( 0.513901, 4 )
emitting = false
amount = 5
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.1
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 7 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Visibility" ]

[node name="ShootTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.35
one_shot = false
autostart = false

[node name="anim" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Damaged = SubResource( 8 )
anims/Normal = SubResource( 9 )
blend_times = [  ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="5"]

editor/display_folded = true
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Health" type="Control" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Bar" type="TextureProgress" parent="CanvasLayer/Health" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 48.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 6.0
step = 1.0
page = 0.0
value = 3.0
exp_edit = false
rounded = true
texture_under = ExtResource( 12 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 14 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 15 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="hurt" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 16 )
volume_db = -6.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Sounds"

[connection signal="damaged" from="." to="CanvasLayer/Health/Bar" method="_on_Player_damaged"]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]


